fix dark mode css

--- a/public/css/appdark.css
+++ b/public/css/appdark.css
@@ -73,6 +73,12 @@ body {
   background: rgb(25, 25, 25);
 }
 
+.content_signup {
+  color: rgb(167, 167, 167);
+  background-color: rgba(0,0,0,0.5);
+  background: rgba(0,0,0,0.5)
+}
+
 .content p a,
 .content a,
 .content_signup p a,
@@ -84,6 +90,17 @@ body {
 
 #footer {
   background: rgb(31, 31, 31);
+}
+
+#footer_signup {
+  /*background: rgb(0, 0, 0);*/
+}
+
+#footer p,
+#footer a,
+#footer_signup p,
+#footer_signup a {
+  color: rgb(167, 167, 167);
 }
 
 a,
